@@ -65,7 +65,8 @@ class MyFileDialog : public KFileDialog
                 QWidget *parent=0,
                 const char *name=0,
                 bool modal=0)
-            :  KFileDialog (startDir, filter, parent, name, modal) {}
+            :  KFileDialog (startDir, filter, parent, name, modal),
+        m_slotOkCalled( false ) {}
 
         KURL currentURL()
         {
@@ -88,6 +89,14 @@ class MyFileDialog : public KFileDialog
             }
             return ok;
         }
+        // Called directly by pressing Return in the location combo
+        // (so we need to remember that it got called, to avoid calling it twice)
+        // Called "by hand" when clicking on our OK button
+        void slotOk() {
+            m_slotOkCalled = true;
+            KFileDialog::slotOk();
+        }
+        bool slotOkCalled() const { return m_slotOkCalled; }
     protected:
     // Typing a file that doesn't exist closes the file dialog, we have to
     // handle this case better here.
@@ -100,7 +109,8 @@ class MyFileDialog : public KFileDialog
 		KFileDialog::reject();
 		emit cancelClicked();
         }
-
+private:
+        bool m_slotOkCalled;
 };
 
 /*================================================================*/
@@ -637,7 +647,7 @@ void KoTemplateChooseDia::slotOk()
 	    {
 		// The checkbox m_nodiag is in tri-state mode for new documents
 		// fixes bug:77542
-		
+
 		if (d->m_nodiag->state() == QButton::On) {
 		    grp.writeEntry( "NoStartDlg", "yes");
 		}
@@ -699,10 +709,12 @@ bool KoTemplateChooseDia::collectInfo()
 	else
 	{
 		// Existing file from file dialog
+	        if ( !d->m_filedialog->slotOkCalled() )
+	            d->m_filedialog->slotOk();
 		KURL url = d->m_filedialog->currentURL();
 		d->m_fullTemplateName = url.url();
-		d->m_returnType = File;
-                return d->m_filedialog->checkURL();
+	        d->m_returnType = File;
+	        return d->m_filedialog->checkURL();
 	}
 	return true;
     }
